--- a/src/assets/styles/forms.css
+++ b/src/assets/styles/forms.css
@@ -10,9 +10,14 @@
     padding: 5px;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
     width: 90%;
+    text-align: left;
   }
   .mb-3 {
     width: 100%;
+    text-align: left;
+  }
+  .form-label {
+    color: var(--text-color);
   }
   .form-control {
     background-color: var(--background-color) !important;
