--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -74,7 +74,7 @@ body {
   background-color: #222222;
   margin: 0 auto;
   padding: 1rem;
-  border-radius: 5px;
+  border-radius: 1.5rem;
   box-shadow: 0px 0px 20px 0px #000000;
   margin-bottom: 2rem;
   margin-top: 1rem;
@@ -147,8 +147,9 @@ select {
     font-size: 0.75rem;
   }
   .app-container {
+    padding: 0;
     margin: 0 auto;
-    width: 100%;
+    width: 100% !important;
   }
   .content-box {
     width: 100%;
