--- a/src/components/global/header/Header.css
+++ b/src/components/global/header/Header.css
@@ -29,12 +29,10 @@
 .navbar-toggler-icon {
   background-color: var(--background-color) !important; /* Use your custom primary color */
   padding: 1rem;
-  border: 1px solid var(--text-color) !important; /* Use your custom primary color */
+  border: 1px solid var(--border-color) !important; /* Use your custom primary color */
 }
 /* Improve dropdown menu appearance */
 .dropdown-menu {
-  border: none;
-  box-shadow: 0 2px 4px rgba(0,0,0,.2); /* Adds a shadow for depth, similar to the header */
   background-color: var(--primary-color);
   padding: 0 !important;
 }
@@ -69,6 +67,7 @@
   color: var(--text-color) !important;
 }
 
+
 /* Responsive adjustments */
 @media (max-width: 992px) { /* Adjust breakpoint if needed */
   .header {
@@ -99,5 +98,8 @@
 @media (max-width: 480px) {
   .logo {
     max-width: 175px; /* Further reduce the logo size on very small screens */
+  }
+  .navbar-toggler .collapsed {
+    background-color: #fff;
   }
 }
