--- a/src/components/global/three-column-layout/ThreeColumnLayout.css
+++ b/src/components/global/three-column-layout/ThreeColumnLayout.css
@@ -8,6 +8,7 @@
         padding: .5rem;
         margin-top: 2rem;
         max-width: 1920px;
+        margin-bottom: 2rem;
       }
       .main-content-box {
         width: 100%;
@@ -19,18 +20,80 @@
         padding: 1rem;
         border-radius: 1.5rem;
         box-shadow: 0px 0px 20px 0px #000000;
-        margin-bottom: 2rem;
         margin-top: 1rem;
       }
       .left-side-content {
         width: 100%;
-      
-      }
-      .left-side-content {
-        width: 100%;
         height: auto;
+        padding-top: 1.25rem;
       }
       .right-side-content {
         width: 100%;
         height: auto;
+        padding-top: 1.25rem;
+        
+      }
+      .collapsible-panel {
+        width: 100%;
+      }
+      
+      .collapsible-content-button {
+        border-bottom:var(--border-color) 1px outset;
+        border-top: var(--text-color) 1px inset;
+        width: 100%;
+        background-color: transparent;
+        color: var(--primary-color);
+        padding: .25rem 1rem;
+        text-align: left;
+        display: block;
+        transition: all 0.3s ease;
+        cursor: pointer;
+        position: relative;
+        font-weight: bold;
+      }
+      
+      .collapsible-content-button:hover {
+        background-color: var(--hover-background-color);
+        color: var(--text-color);
+      }
+      
+      .collapsible-panels-button {
+        visibility: hidden;
+        
+      }
+
+      .arrow {
+        position: absolute;
+        right: .8rem;
+        top: 50%; /* Center vertically within the button */
+        transform: translateY(-50%); /* Align center regardless of the button height */
+        transition: transform 0.3s ease;
+      }
+      
+      .arrow::before {
+        content: '▼'; /* Ensure the content is set for the arrow to appear */
+      }
+      
+      .arrow.up {
+        transform: translateY(-50%) rotate(180deg);
+      }
+      
+      .panel-content {
+        padding: 1rem;
+        border: .1rem outset var(--border-color);
+        border-top: 0px;
+        background-color: #222;
+        margin-bottom: 1rem;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+      }
+      @media screen and (max-width: 480px) {
+        .collapsible-panels-button {
+          visibility: visible;
+          border: none!important;
+          width: 100% !important;
+          color: #fff !important;
+          text-align: left !important;
+          font-size: .5rem;
+        }
       }
