Beginning of integrating a real backend and removing mock services

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
     --primary-color: #b66803;
     --background-color: #272727;
+    --secondary-background-color: #1a1611;
     --text-color: #a18b0f;
     --hover-background-color: #000000;
     --border-color: #b66803;
