--- a/src/assets/styles/forms.css
+++ b/src/assets/styles/forms.css
@@ -1,110 +1,154 @@
 /* forms.css */
+
 .form-container, input, select, button {
-    background-color: var(--background-color);
-    color: #a18b0f;
-    border: 1px solid #a18b0f;
-    border-radius: 5px;
-    margin: 0 auto;
+  background-color: var(--background-color);
+  color: #a18b0f;
+  border: 1px solid #a18b0f;
+  border-radius: 5px;
+  margin: 0 auto;
 }
+
+.form-container {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  width: 50% !important;
+  text-align: center;
+  padding-top: 1rem;
+}
+
+.form-section-container{
+  width: 100%;
+  text-align: left;
+  margin-bottom: 1.25rem;
+}
+
+.form-label {
+  color: var(--primary-color);
+  font-family: 'Sovjet Box', sans-serif;
+  font-weight: bold;
+  font-size: .75rem;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0rem;
+}
+
+.form-control {
+  background-color: var(--secondary-background-color) !important;
+  border-color: var(--border-color) !important;
+  color: var(--text-color) !important;
+  margin-top: 0rem;
+  padding-top: 0rem;
+  font-family: sans-serif;
+  font-size: .85rem !important;
+}
+
+.form-control:-webkit-autofill {
+  background-color: var(--background-color) !important;
+  border-color: var(--border-color) !important;
+  color: var(--text-color) !important;
+  margin-bottom: 1em;
+  font-family: sans-serif;
+}
+
+.form-button {
+  background-color: var(--background-color) !important;
+  border-color: var(--border-color) !important;
+  color: var(--text-color) !important;
+  margin: .3rem;
+  font-size: .85rem !important;
+}
+
+.small-button {
+  background-color: var(--background-color) !important;
+  border: none !important;
+  padding: 2px 6px !important;
+  font-size: 0.5rem !important;
+  margin-left: .15rem;
+  cursor: pointer;
+}
+
+.small-button:hover {
+  background-color: var(--hover-background-color) !important;
+  color: var(--primary-color) !important;
+}
+
+.form-field-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: .15rem;
+}
+
+.errorMessage {
+  color: red;
+  margin: .3rem 0;
+  font-size: .65rem;
+}
+
+.form-control.editable {
+  border-color: yellow !important;
+}
+
+.radio-container label:before {
+  content: '';
+  width: 18px;
+  height: 18px;
+  border: 2px solid #a18b0f;
+  border-radius: 50%;
+}
+
+.radio-container input[type="radio"]:checked + label:before {
+  background-color: #000;
+}
+
+.checkbox-container input[type="checkbox"] {
+  display: none; /* Hide the default checkbox */
+}
+
+.checkbox-container label:before {
+  content: '';
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  margin-right: 10px;
+  border: 2px solid #a18b0f; /* Same as your radio buttons for consistency */
+  border-radius: 4px; /* Square with slightly rounded corners */
+  vertical-align: middle;
+}
+
+.checkbox-container input[type="checkbox"]:checked + label:before {
+  background-color: #a18b0f; /* Filled color when checked */
+}
+.password-wrapper {
+  position: relative;
+}
+
+.password-toggle-btn {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+@media screen and (max-width: 480px) {
+  .form-container select, .form-container input, .form-container button {
+      margin-bottom: 15px; /* Increase spacing for touch targets */
+  }
 
   .form-container {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    width: 50% !important;
-    text-align: center;
-    padding-top: 1rem;
+      width: 95% !important; /* Allow some margin on the sides */
   }
-  .mb-3 {
-    width: 100%;
-    text-align: left;
-  }
-  .form-label {
-    color: var(--primary-color);
-    font-family: 'Sovjet Box', sans-serif;
-    font-weight: bold;
-    font-size: .75rem;
-    display: block;
-  }
-  .form-control {
-    background-color: var(--background-color) !important;
-    border-color: var(--border-color) !important;
-    color: var(--text-color) !important;
-    margin-bottom: 1em;
-    font-family: 'Sovjet Box', sans-serif;
-  }
-  .form-control:-webkit-autofill {
-    background-color: var(--background-color) !important;
-    border-color: var(--border-color) !important;
-    color: var(--text-color) !important;
-    margin-bottom: 1em;
-    font-family: 'Sovjet Box', sans-serif;
 }
 
-  .form-button {
-    background-color: var(--background-color) !important;
-    border-color: var(--border-color) !important;
-    color: var(--text-color) !important;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-
-  }
-  .form-button:hover {
-    background-color: var(--hover-background-color) !important;
-    color: var(--primary-color) !important;
-  }
-  .radio-container label:before {
-    content: '';
-    width: 18px;
-    height: 18px;
-    border: 2px solid #a18b0f;
-    border-radius: 50%;
-  }
-  
-  .radio-container input[type="radio"]:checked + label:before {
-    background-color: #000;
-  }
-  .checkbox-container input[type="checkbox"] {
-    display: none; /* Hide the default checkbox */
-  }
-  .checkbox-container label:before {
-    content: '';
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-    margin-right: 10px;
-    border: 2px solid #a18b0f; /* Same as your radio buttons for consistency */
-    border-radius: 4px; /* Square with slightly rounded corners */
-    vertical-align: middle;
-  }
-  .checkbox-container input[type="checkbox"]:checked + label:before {
-    background-color: #a18b0f; /* Filled color when checked */
-  }
-  
-  .errorMessage {
-    color: red;
-    margin: 5px 0;
-  }
-  
-
-  @media screen and (max-width: 480px) {
-    .form-container select, .form-container input, .form-container button {
-
+@media screen and (max-width: 768px) {
+  .form-container select, .form-container input, .form-container button {
       margin-bottom: 15px; /* Increase spacing for touch targets */
-    }
-  
-    .form-container {
-      width: 95% !important; /* Allow some margin on the sides */
-      
-    }
   }
 
-  @media screen and (max-width: 768px) {
-    .form-container select, .form-container input, .form-container button {
-      margin-bottom: 15px; /* Increase spacing for touch targets */
-    }
-  
-    .form-container {
-
+  .form-container {
       width: 95% !important; /* Allow some margin on the sides */
-    }
   }
+}
