--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -1,11 +1,11 @@
 :root {
-    --primary-color: #b66803;
+    --primary-color: #ff9100;
     --background-color: #272727;
-    --secondary-background-color: #1a1611;
-    --text-color: #a18b0f;
-    --hover-background-color: #000000;
+    --secondary-background-color: #201d19;
+    --text-color: #fdc243;
+    --hover-background-color: #524d42;
     --border-color: #b66803;
-    --link-color: #b37b32;
+    --link-color: #ff6600;
 
       /* Responsive breakpoints */
   --breakpoint-sm: 480px;
