--- a/src/components/global/breadcrumb/Breadcrumb.css
+++ b/src/components/global/breadcrumb/Breadcrumb.css
@@ -1,5 +1,5 @@
 .custom-breadcrumb {
-  font-family: "Sovjet Box", sans-serif;
+  font-family: 'Sovjet Box', sans-serif;
   width: 100%;
   margin-top: 0;
   border-radius: 0.35rem;
@@ -7,24 +7,25 @@
   box-shadow: 0 5px 5px #000;
   display: flex;
   position: fixed;
-  justify-content: space-evenly; /* Add this line */
+  justify-content: space-evenly;
   background-color: var(--background-color);
   z-index: 1000;
 }
 
 .custom-breadcrumb ol {
   background-color: var(--background-color);
-  padding: .1rem .5rem 0rem .5rem;
+  padding: 0.1rem 0.5rem 0rem 0.5rem;
   margin: 0;
 }
+
 .custom-breadcrumb ol li {
   display: inline;
   padding: 0;
 }
+
 @media screen and (max-width: 480px) {
   .custom-breadcrumb ol {
-    font-size: .70rem;
+    font-size: 0.7rem;
     padding: 0;
   }
-  
 }
